# Vibecode-Cleaner-Fartrun

./: .gitignore  CLAUDE.md  LICENSE  MCP.md  README.md  config.toml.example  fartrun.spec  pyproject.toml
.fartrun/reports/: HEALTH-REPORT-2026-04-21.md
.github/workflows/: release.yml
core/: ai_client.py  alerts.py  cli.py  config.py  haiku_client.py  platform.py  version.py
core/health/: brake_system.py  cache.py  context7_recommendations.py  dead_code.py  delta_scan.py  duplicates.py  git_delta.py  git_survival.py  module_map.py  project_map.py  report_md.py  reusable.py  tech_debt.py
core/mcp/: server.py
core/mcp/tools/: health.py
core/nagger/: hasselhoff.py
core/platform_backends/: linux.py  macos.py  windows.py
docs/: README.md  architecture.md  cli.md  configuration.md  cross-platform.md  for-ai-agents.md  gui.md  health-scanner.md  mcp.md  nagger.md  npm-installer.md  plugins.md  rust-backend.md  safety-net.md  security-scanner.md
gui/: win95_popup.py
gui/app/: main.py  styles.py
gui/dialogs/: about.py
gui/pages/: about.py  frozen_tab.py  save_points_page.py  security.py  settings.py
i18n/: en.py  ua.py
npm/: LICENSE  README.md  package.json
npm/npm/: README.md  package.json
plugins/port_map/: collector.py  plugin.py
tests/: test_ai_client.py  test_alerts.py  test_cache.py  test_cli.py  test_dead_code_persistence.py  test_delta_scan.py  test_duplicates_persistence.py  test_git_delta.py  test_incremental_dead_code.py  test_module_map_persistence.py  test_per_file_scanners.py  test_reusable_persistence.py  test_scan_context.py
(+30 files in other folders)
