[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-monitor"
version = "3.0.0"
description = "Dev environment monitoring platform — Win95 style"
requires-python = ">=3.11"
dependencies = [
    "PyQt5>=5.15",
    "docker>=7.0",
    "psutil>=5.9",
    "aiosqlite>=0.19",
    "tomli_w>=1.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
http = ["starlette>=0.36", "uvicorn>=0.27"]
security = ["pip-audit>=2.6"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
dev-monitor-gui = "gui.app:main"
fartrun = "core.cli:main"
fartrun-mcp = "core.mcp:main"
fartrun-mcp-http = "core.mcp.server:main_http"

[tool.setuptools.packages.find]
include = ["core*", "gui*", "plugins*", "i18n*", "data*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
